Fix CI/CD pipeline issues: CSS linting errors and SonarCloud test server binary
- Fix CSS linting errors in static/css/app-consolidated.css and static/css/components.css
  - Change #0088cc to #08c to comply with color-hex-length rule
- Add missing test server binary build step to SonarCloud workflow
  - Add 'Build test server binary for CI' step to build test-server-ci executable
  - This fixes TestAPIIntegration and TestAPIPerformance failures in SonarCloud analysis

These changes should resolve 2/22 failing CI/CD checks:
- Frontend Quality & Performance (CSS linting)
- SonarCloud Security Analysis (missing test server binary)

--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -57,6 +57,11 @@ jobs:
         run: |
           sqlite3 news.db '.schema' || echo "Database setup complete"
 
+      - name: Build test server binary for CI
+        run: |
+          go build -o test-server-ci ./cmd/server
+          chmod +x test-server-ci
+
       - name: Run unit tests with coverage
         env:
           NO_AUTO_ANALYZE: "true"
