--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "test:e2e:debug": "playwright test --debug",
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:report": "playwright show-report",
-    "test:e2e:ci": "playwright test tests/e2e/accessibility-pages.spec.ts tests/progress-indicator.spec.ts --reporter=dot",
+    "test:e2e:ci": "playwright test tests/e2e/ --reporter=dot --timeout=60000",
     "test:accessibility": "playwright test tests/e2e/accessibility-pages.spec.ts --reporter=dot",
+    "test:mobile": "playwright test tests/e2e/mobile-responsiveness-optimized.spec.ts --reporter=dot",
     "test:progress-indicator": "playwright test tests/progress-indicator.spec.ts --reporter=dot",
     "lint:css": "stylelint \"static/css/**/*.css\""
   },
